# FollowWeb

./: .env.example  .gitignore  .pre-commit-config.yaml  ALL_ISSUES_FIXED.md  ANALYSIS_SUMMARY.md  API_IMPLEMENTATION_REVIEW.md  BACKUP_FAILURE_POLICY.md  BACKUP_FILES_MANIFEST.md  BACKUP_IMPLEMENTATION_SUMMARY.md  BACKUP_QUICK_REFERENCE.md  BACKUP_SETUP_INSTRUCTIONS.md  BACKUP_SYSTEM_GUIDE.md  BACKUP_SYSTEM_REPORT.md  BACKWARDS_COMPATIBILITY_CLEANUP_REPORT.md  BUG_FIXES_APPLIED.md  CHECKPOINT_SAVE_AUDIT.md  CI_DOCS_DEPENDENCY_ANALYSIS.md  CI_FIXES_SUMMARY.md  CI_OPTIMIZATION_PLAN.md  CI_PIPELINE_ANALYSIS.md  CI_PIPELINE_OPTIMIZATION_COMPLETE.md  CLEANUP_SUMMARY.md  CNAME  CODESPACES_SETUP.md  COMMIT_SUMMARY.md  COMPLETE_SITE_REVIEW.md  COMPREHENSIVE_REPAIR_IMPLEMENTATION.md  FAST_FLAG_INVESTIGATION_REPORT.md  FINAL_TEST_STATUS.md  FIXES_APPLIED.md  FIXES_IMPLEMENTED.md  FIX_AUDIO_PLAYBACK.md  FREESOUND_PIPELINE_FIX.md  FREESOUND_PIPELINE_FIX_PLAN.md  FollowWeb_Scraper.py  FollowWeb_Visualization.py  GITHUB_PAGES_SETUP.md  GITHUB_WORKFLOWS_CLEANUP_REPORT.md  IMPLEMENTATION_PHASE1.md  ISSUE_RESOLUTION_DOCUMENTATION.md  (+77 more)
FollowWeb/: .gitignore  CHANGELOG.md  INSTALL_GUIDE.md  MANIFEST.in  Makefile  README.md  REQUIREMENTS_GUIDE.md  TESTING_QUICK_REFERENCE.md  TestOutput-k-core-k10-369407_timing.txt  TestOutput-k-core-k10-865d5a_timing.txt  TestOutput-k-core-k10-95dde4_timing.txt  TestOutput-k-core-k10-98c546_timing.txt  TestOutput-k-core-k10-d16892_timing.txt  TestOutput-k-core-k2-17c21e_timing.txt  TestOutput-k-core-k2-2b8b4e_timing.txt  TestOutput-k-core-k2-a4c219_timing.txt  TestOutput-k-core-k2-f58694_timing.txt  ci_helpers.py  mypy_errors.txt  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-minimal.txt  requirements-security.txt  requirements-test.txt  requirements.txt  setup.py
FollowWeb/.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml  test-integration.yml
FollowWeb/FollowWeb_Visualizor/: __init__.py  __main__.py  main.py
FollowWeb/FollowWeb_Visualizor/analysis/: __init__.py  centrality.py  connectivity.py  fame.py  network.py  partition_merger.py  partition_worker.py  partitioning.py  paths.py
FollowWeb/FollowWeb_Visualizor/core/: __init__.py  config.py  exceptions.py  types.py
FollowWeb/FollowWeb_Visualizor/data/: __init__.py  backup_manager.py  cache.py  checkpoint.py  checkpoint_verifier.py  loaders.py  processors.py  strategies.py
FollowWeb/FollowWeb_Visualizor/output/: __init__.py  formatters.py  logging.py  managers.py
FollowWeb/FollowWeb_Visualizor/utils/: __init__.py  failure_handler.py  files.py  github_issue_creator.py  math.py  parallel.py  progress.py  rate_limiter.py  url_helpers.py  validation.py
FollowWeb/FollowWeb_Visualizor/visualization/: __init__.py  color_palette.py  colors.py  legends.py  metrics.py  renderers.py
FollowWeb/Output/: FollowWeb-k-core-k10-35016c.txt
FollowWeb/analysis_tools/: __main__.py  ai_language_scanner.py  analyzer.py  ast_utils.py  code_analyzer.py  duplication_detector.py  models.py  test_analyzer.py  test_code_analyzer.py
FollowWeb/configs/: CONFIG_REFERENCE.md  README.md  comprehensive_layout_config.json  custom_k1_config.json  custom_k3_config.json  fast_config.json  fast_config_k1.json  freesound_sigma_config.json  full_network_k1_config.json  improved_spacing_config.json  instagram_sigma_demo.json  k3_config.json  k6_config.json  large_network_config.json  ultra_fast_config_k1.json
FollowWeb/custom_checkpoints/: metadata_cache.db
FollowWeb/data/freesound_library/: checkpoint_metadata.json  metadata_cache.db
FollowWeb/docs/: CDN_DEPENDENCIES.md  COLOR_PALETTE.md  COLOR_PALETTE_GUIDE.md  COLOR_REFERENCE.md  COLOR_REGISTRY.md  CONFIGURATION_GUIDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_VERIFICATION.md  FREESOUND_GUIDE.md  INSTALL_GUIDE.md  QUICK_START_FREESOUND.md  SIGMA_INSTAGRAM_TEMPLATE.md  USER_GUIDE.md
FollowWeb/docs/attribution/: CONTRIBUTORS.md  DEPENDENCIES_ATTRIBUTION.md  LICENSE_NOTICES.md
FollowWeb/docs/config_examples/: README.md  complete_config.json  ego_network_config.json  enhanced_default_config.json  fast_mode_config.json  research_config.json
FollowWeb/docs/development/: API_REFERENCE.md  CONTRIBUTING.md  PACKAGE_OVERVIEW.md
FollowWeb/examples/: README.md  followers_following.json  generate_instagram_sigma.py
FollowWeb/followweb_visualizor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
FollowWeb/tests/: README.md  __init__.py  conftest.py  run_tests.py
FollowWeb/tests/Output/: .coverage  FollowWeb-k-core-k10-0057ee.txt  FollowWeb-k-core-k10-013eec.txt  FollowWeb-k-core-k10-0268ec.txt  FollowWeb-k-core-k10-04ba3b.txt  FollowWeb-k-core-k10-0f032a.txt  FollowWeb-k-core-k10-19cdc9.txt  FollowWeb-k-core-k10-1fd522.txt  FollowWeb-k-core-k10-27a4ce.txt  FollowWeb-k-core-k10-3b285e.txt  FollowWeb-k-core-k10-48cd4c.txt  FollowWeb-k-core-k10-4de7d7.txt  FollowWeb-k-core-k10-50d992.txt  FollowWeb-k-core-k10-5a11f0.txt  FollowWeb-k-core-k10-6489cd.txt  FollowWeb-k-core-k10-7caf29.txt  FollowWeb-k-core-k10-861c78.txt  FollowWeb-k-core-k10-91b1d3.txt  FollowWeb-k-core-k10-9e1f0c.txt  FollowWeb-k-core-k10-9e9e71.txt  FollowWeb-k-core-k10-b69d2b.txt  FollowWeb-k-core-k10-b70447.txt  FollowWeb-k-core-k10-c14d7f.txt  FollowWeb-k-core-k10-c5b06a.txt  FollowWeb-k-core-k10-efc94a.txt  FollowWeb-k-core-k10-f06109.txt  FollowWeb-k-core-k10-f37edd.txt  FollowWeb-k-core-k10-f4ff7d.txt  FollowWeb-reciprocal_k-core-k10-543670.txt  coverage.xml
FollowWeb/tests/integration/: test_final_validation.py  test_graph_partitioning_pipeline.py  test_loader_integration.py  test_pipeline.py  test_pipeline_integration.py  test_sigma_visualization.py  test_ui_ux_integration.py  test_unified_output_integration.py  test_workflow_chain.py
FollowWeb/tests/performance/: test_benchmarks.py  test_freesound_discovery_modes.py  test_freesound_large_scale.py  test_freesound_memory_profiling.py  test_freesound_refactor_benchmarks.py  test_graph_partitioning_benchmarks.py  test_timing_benchmarks.py
FollowWeb/tests/test_data/: .gitignore  .gitkeep  README.md  large_real.json  (+3 more)
(+340 files in other folders)
