[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
# Cache key: 2025-11-13-fix-dependencies

[project]
name = "followweb-visualizor"
version = "1.0.1"
description = "Social network analysis and visualization tool for Instagram follower/following relationships with community detection and influence metrics"
readme = "README.md"
license = "MIT"
authors = [
    {name = "FollowWeb Development Team", email = "followweb.dev@example.com"},
]
maintainers = [
    {name = "FollowWeb Development Team", email = "followweb.dev@example.com"},
]
keywords = [
    "social network analysis",
    "graph theory", 
    "network visualization",
    "community detection",
    "centrality analysis",
    "instagram analysis",
    "follower analysis",
    "network metrics",
    "social media analytics",
    "graph algorithms",
    "network science",
    "social graphs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Sociology",

    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "networkx>=2.8.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "pyvis>=0.3.0",
    "nx-parallel>=0.3.0; python_version>='3.11'",
    "typing_extensions>=4.0.0",
    "freesound-python>=1.1.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.9.0",
    "joblib>=1.3.0",
    "tenacity>=8.2.0",
    # Security-patched dependencies (updated to resolve pip-audit vulnerabilities)
    "jinja2>=3.1.6",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
    "h11>=0.16.0",
    "starlette>=0.49.1",
    "tornado>=6.5",
    "authlib>=1.6.5",
    "pypdf>=6.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "psutil>=5.9.0",  # Required for memory-aware test parallelization
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "check-manifest>=0.49",
    "shellcheck-py>=0.10.0",  # Shell script linting for workflow validation
]
cleanup = [
    # File operations and organization
    "organize-tool>=3.2.0",
    # Git operations
    "GitPython>=3.1.40",
    "git-filter-repo>=2.38.0",
    # GitHub API integration
    "github3.py>=3.2.0",
    # YAML parsing
    "PyYAML>=6.0.1",
    # CI/CD orchestration
    "reviewdog>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/AlexM1010/FollowWeb"
Repository = "https://github.com/AlexM1010/FollowWeb"
Documentation = "https://github.com/AlexM1010/FollowWeb/blob/main/docs/"
"Bug Tracker" = "https://github.com/AlexM1010/FollowWeb/issues"

[project.scripts]
followweb = "FollowWeb_Visualizor.__main__:main"

[tool.setuptools]
packages = [
    "FollowWeb_Visualizor",
    "FollowWeb_Visualizor.analysis",
    "FollowWeb_Visualizor.core", 
    "FollowWeb_Visualizor.data",
    "FollowWeb_Visualizor.data.loaders",
    "FollowWeb_Visualizor.data.storage",
    "FollowWeb_Visualizor.output",
    "FollowWeb_Visualizor.utils",
    "FollowWeb_Visualizor.visualization",
    "FollowWeb_Visualizor.visualization.renderers",
    "FollowWeb_Visualizor.visualization.renderers.templates"
]

[tool.setuptools.package-data]
"FollowWeb_Visualizor" = ["py.typed"]
"FollowWeb_Visualizor.visualization.renderers" = ["templates/*.html"]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = true
show_error_codes = true
follow_imports = "skip"
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "venv/",
    ".git/",
    "__pycache__/",
    ".*\\.ipynb$"
]

# Allow missing imports for optional dependencies
[[tool.mypy.overrides]]
module = [
    "nx_parallel.*",
    "pyvis.*",
    "matplotlib.*",
    "pandas.*",
    "networkx.*"
]
ignore_missing_imports = true

# Be more lenient with __main__.py since it has many logger None issues
[[tool.mypy.overrides]]
module = "FollowWeb_Visualizor.__main__"
disable_error_code = ["attr-defined", "assignment", "operator"]

# Be more lenient with output managers
[[tool.mypy.overrides]]
module = "FollowWeb_Visualizor.output.*"
disable_error_code = ["unreachable", "no-any-return", "assignment"]

# Be more lenient with visualization modules
[[tool.mypy.overrides]]
module = "FollowWeb_Visualizor.visualization.*"
disable_error_code = ["return-value", "assignment", "arg-type", "index"]

# Be more lenient with analysis modules
[[tool.mypy.overrides]]
module = "FollowWeb_Visualizor.analysis.*"
disable_error_code = ["no-any-return", "var-annotated"]

# Be more lenient with utils and data modules
[[tool.mypy.overrides]]
module = [
    "FollowWeb_Visualizor.utils.*",
    "FollowWeb_Visualizor.data.*"
]
disable_error_code = ["no-untyped-def", "assignment", "no-any-return", "comparison-overlap", "index"]
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance tests",
    "benchmark: marks tests as benchmark tests",
]

[tool.coverage.run]
source = ["FollowWeb_Visualizor"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
]
parallel = true

[tool.coverage.report]
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]